# team-speak-ai

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  pipeline-snapshot.md  start-all.bat  start-all.sh  stop-all.bat  stop-all.sh
.claude/: settings.local.json
team-speak-ai/backend/: .env.example  config.py  main.py  pyproject.toml  requirements.txt  test_sensevoice.py
team-speak-ai/backend/api/: dependencies.py
team-speak-ai/backend/api/routes/: control.py  files.py  ocr.py  tts.py  ws_client.py  ws_editor.py  ws_exec.py  ws_flow.py  ws_main.py  ws_pipeline.py  ws_presets.py  ws_teamspeak.py  ws_utils.py
team-speak-ai/backend/config/pipelines/: darkzone_championship.yaml
team-speak-ai/backend/core/: app_context.py  preheat.py
team-speak-ai/backend/core/audio/: audio_buffer.py  audio_bus.py
team-speak-ai/backend/core/config/: defaults.py  preheat.py
team-speak-ai/backend/core/exceptions/: __init__.py  audio.py  base.py  flow.py  pipeline.py  provider.py  ws.py
team-speak-ai/backend/core/flow/: __init__.py  manager.py
team-speak-ai/backend/core/history/: __init__.py  manager.py
team-speak-ai/backend/core/llm/: base.py  factory.py  openai_llm.py
team-speak-ai/backend/core/logger/: base.py  context.py  factory.py  file_logger.py  handler.py
team-speak-ai/backend/core/nodes/: __init__.py  audio_player_node.py  base.py  context_build_node.py  display_text_node.py  flow_var_read_node.py  flow_var_write_node.py  input_image.py  llm_node.py  ocr_node.py  start_node.py  stt_history_node.py  stt_listen_node.py  sys_var_read_node.py  sys_var_write_node.py  text_input_node.py  ts_input_node.py  ts_output_node.py  tts_node.py  vad_node.py
team-speak-ai/backend/data/: groups.json  system_vars.json
team-speak-ai/backend/models/: upload.py  voice_message.py
team-speak-ai/backend/services/: event_bus.py  file_storage.py  session_manager.py
team-speak-ai/backend/tests/: conftest.py  factories.py
(+232 files in other folders)
