[tool.poetry]
name = "team-speak-ai-backend"
version = "0.1.0"
description = "TeamSpeak AI Backend with WebSocket voice support"
authors = ["TeamSpeak AI Team"]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = ">=0.109.0"
uvicorn = {extras = ["standard"], version = ">=0.27.0"}
websockets = ">=12.0"
pydantic = ">=2.0"
pydantic-settings = ">=2.0"
opuslib = ">=1.4.0"
faster-whisper = ">=1.0.0"
edge-tts = ">=6.1.0"
aiohttp = ">=3.9.0"
python-multipart = ">=0.0.6"
httpx = ">=0.26.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-asyncio = "^0.23.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
