[tool.poetry]
name = "team-speak-ai-backend"
version = "0.1.0"
description = "TeamSpeak AI Backend with WebSocket voice support"
authors = ["TeamSpeak AI Team"]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = ">=0.109.0"
uvicorn = {extras = ["standard"], version = ">=0.27.0"}
websockets = ">=12.0"
pydantic = ">=2.0"
pydantic-settings = ">=2.0"
opuslib = ">=1.4.0"
faster-whisper = ">=1.0.0"
edge-tts = ">=6.1.0"
aiohttp = ">=3.9.0"
python-multipart = ">=0.0.6"
httpx = ">=0.26.0"
pyyaml = ">=6.0"
openai = ">=1.0.0"
scipy = ">=1.10.0"
soundfile = ">=0.12.0"
numpy = ">=1.24.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-asyncio = "^0.23.0"
pytest-cov = "^5.0"
pytest-mock = "^3.14"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
markers = [
    "unit: 纯逻辑单元测试",
    "integration: 涉及文件 I/O 的集成测试",
    "ws: WebSocket 协议测试",
    "slow: 涉及真实网络/模型的慢测试",
]
addopts = "-v --tb=short"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
